--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node runtime as a parent image
-FROM node:14
+FROM node:18
 
 # Set the working directory in the container
 WORKDIR /app
@@ -10,13 +10,13 @@ COPY package*.json ./
 # Install any needed packages specified in package.json
 RUN npm install
 
-# If you are building your code for production
+# If you are building your code for production, use the following:
 # RUN npm ci --only=production
 
 # Copy the rest of the application code to the working directory
 COPY . .
 
-# Make port 8080 available to the world outside this container
+# Make port 8085 available to the world outside this container
 EXPOSE 8085
 
 # Define the command to run your application
